--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,13 @@
-NEXT_PUBLIC_EMAILJS_SERVICE_ID=service_2dhitwv
+# NEXT_PUBLIC_EMAILJS_SERVICE_ID=service_2dhitwv
+# NEXT_PUBLIC_EMAILJS_TEMPLATE_ID=template_gzp7rfe
+# NEXT_PUBLIC_EMAILJS_PUBLIC_KEY=w4e_RKpEr7dfbVWZg
+
+
+
+
+
+NEXT_PUBLIC_EMAILJS_SERVICE_ID=service_hcksvpc
 NEXT_PUBLIC_EMAILJS_TEMPLATE_ID=template_gzp7rfe
 NEXT_PUBLIC_EMAILJS_PUBLIC_KEY=w4e_RKpEr7dfbVWZg
+
+
